--- a/PedidosSuperPollo/PedidosSuperPollo/Views/HomeView.xaml
+++ b/PedidosSuperPollo/PedidosSuperPollo/Views/HomeView.xaml
@@ -3,7 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PedidosSuperPollo.Views.HomeView">
   <!--Pages can be added as references or inline-->
-  <ContentPage Title="Tab 1" />
-  <ContentPage Title="Tab 2" />
-  <ContentPage Title="Tab 3" />
+
+    <ContentPage Title="Casita">
+        <StackLayout Background="green">
+        </StackLayout>
+    </ContentPage>
+    <ContentPage Title="Buscar" />
+  <ContentPage Title="Historial" />
 </TabbedPage>
