--- a/PedidosSuperPollo/PedidosSuperPollo/Views/HomeView.xaml
+++ b/PedidosSuperPollo/PedidosSuperPollo/Views/HomeView.xaml
@@ -3,11 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PedidosSuperPollo.Views.HomeView">
   <!--Pages can be added as references or inline-->
-
+    
     <ContentPage Title="Casita">
-        <StackLayout Background="green">
-        </StackLayout>
+        
+
+
     </ContentPage>
-    <ContentPage Title="Buscar" />
-  <ContentPage Title="Historial" />
+    <ContentPage Title="Buscar">
+        
+    </ContentPage>
+    <ContentPage Title="Historial" />
+    
 </TabbedPage>
