--- a/PedidosSuperPollo/PedidosSuperPollo/Views/Home.xaml
+++ b/PedidosSuperPollo/PedidosSuperPollo/Views/Home.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PedidosSuperPollo.Views.Home"
-             >
+             x:Class="PedidosSuperPollo.Views.Home">
     
     <ContentPage.Content>
         <Grid>
@@ -24,8 +23,14 @@
                     <Label FontSize="27"
                            Padding="0"
                            TextColor="#f7f7f7"
-                           Margin="15,40,0,0"
+                           Margin="15,50,0,0"
                            FontFamily="GothamBold">Buenas tardes</Label>
+
+                    <!--
+                    <Path Grid.Column="1"
+                          Stroke="white"
+                          Data="M15,5 v10"></Path> -->
+                    
                     
                     
                     
